[gd_scene load_steps=5 format=3 uid="uid://ctfc7v5v2ubr0"]

[ext_resource type="Script" uid="uid://xo7ak1blw8a8" path="res://notepage_button.gd" id="1_drg7l"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ru705"]
bg_color = Color(0.057375185, 0.057375215, 0.057375178, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_drg7l"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_drg7l"]
bg_color = Color(1, 0, 0, 0.17254902)

[node name="NotepageButton" type="PanelContainer"]
custom_minimum_size = Vector2(0, 80)
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -4.0
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ru705")
script = ExtResource("1_drg7l")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="Control2" type="Control" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="EndCap" type="Control" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2

[node name="TitleLabel" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24
text = "Notepage Title"
vertical_alignment = 1

[node name="Spacer" type="Control" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2

[node name="DateModifiedLabel" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Date Modified"
vertical_alignment = 1

[node name="Spacer2" type="Control" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2

[node name="DateCreatedLabel" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Date Created"
vertical_alignment = 1

[node name="EndCap2" type="Control" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2

[node name="Control" type="Control" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Button" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_drg7l")

[node name="HoldingTimer" type="Timer" parent="."]
unique_name_in_owner = true

[node name="OptionsContainer" type="PanelContainer" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_drg7l")

[node name="VBoxContainer" type="VBoxContainer" parent="OptionsContainer"]
layout_mode = 2

[node name="Control2" type="Control" parent="OptionsContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 1

[node name="HBoxContainer" type="HBoxContainer" parent="OptionsContainer/VBoxContainer"]
layout_mode = 2

[node name="Control2" type="Control" parent="OptionsContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1

[node name="DuplicateButton" type="Button" parent="OptionsContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
mouse_filter = 1
theme_override_font_sizes/font_size = 40
text = "Duplicate"

[node name="Control3" type="Control" parent="OptionsContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
mouse_filter = 1

[node name="DeleteButton" type="Button" parent="OptionsContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
mouse_filter = 1
theme_override_font_sizes/font_size = 40
text = "Delete"

[node name="Control4" type="Control" parent="OptionsContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1

[node name="Control" type="Control" parent="OptionsContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 1

[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="button_down" from="Button" to="." method="_on_button_button_down"]
[connection signal="button_up" from="Button" to="." method="_on_button_button_up"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="timeout" from="HoldingTimer" to="." method="_on_holding_timer_timeout"]
[connection signal="mouse_exited" from="OptionsContainer" to="." method="_on_options_container_mouse_exited"]
[connection signal="pressed" from="OptionsContainer/VBoxContainer/HBoxContainer/DuplicateButton" to="." method="_on_duplicate_button_pressed"]
[connection signal="pressed" from="OptionsContainer/VBoxContainer/HBoxContainer/DeleteButton" to="." method="_on_delete_button_pressed"]
